Add new password endpoint
